fixes to the way we init DatadogReporter